# If-Conversion-Analysis

./: ALC.cpp  CMakeLists.txt  README.md
test/Compiled_files/: dijkstra.c  dijkstra_full_opt.ll  dijkstra_no_select.ll  dijkstra_norm.ll  run_analysis.sh  run_perf_on_full_opt_version.sh  run_perf_on_no_select_version.sh
test/Compiled_files/results/: dijkstra_full_opt_branch_Result_1.txt  dijkstra_full_opt_branch_Result_10.txt  dijkstra_full_opt_branch_Result_100.txt  dijkstra_full_opt_branch_Result_11.txt  dijkstra_full_opt_branch_Result_12.txt  dijkstra_full_opt_branch_Result_13.txt  dijkstra_full_opt_branch_Result_14.txt  dijkstra_full_opt_branch_Result_15.txt  dijkstra_full_opt_branch_Result_16.txt  dijkstra_full_opt_branch_Result_17.txt  dijkstra_full_opt_branch_Result_18.txt  dijkstra_full_opt_branch_Result_19.txt  dijkstra_full_opt_branch_Result_2.txt  dijkstra_full_opt_branch_Result_20.txt  dijkstra_full_opt_branch_Result_21.txt  dijkstra_full_opt_branch_Result_22.txt  dijkstra_full_opt_branch_Result_23.txt  dijkstra_full_opt_branch_Result_24.txt  dijkstra_full_opt_branch_Result_25.txt  dijkstra_full_opt_branch_Result_26.txt  dijkstra_full_opt_branch_Result_27.txt  dijkstra_full_opt_branch_Result_28.txt  dijkstra_full_opt_branch_Result_29.txt  dijkstra_full_opt_branch_Result_3.txt  dijkstra_full_opt_branch_Result_30.txt  dijkstra_full_opt_branch_Result_31.txt  dijkstra_full_opt_branch_Result_32.txt  dijkstra_full_opt_branch_Result_33.txt  dijkstra_full_opt_branch_Result_34.txt  dijkstra_full_opt_branch_Result_35.txt  dijkstra_full_opt_branch_Result_36.txt  (+370 more)
